@@ -1,0 +1,70 @@
+	.include 'dpf.inc'
+
+	.area LCDAUX (CODE)
+
+_lcd_custom_init::
+	mov	p3dir,#0x0
+	anl	p1dir,#0xe8
+	anl	p2dir,#0xfd
+	clr	LCD_CS
+	clr	LCD_RST
+	mov	a,#0x96
+	lcall	X15ae
+	setb	LCD_RST
+	mov	a,#0xc8
+	lcall	X15ae
+	mov	dptr,#_custom_initseq
+	ljmp	_lcd_init_by_table
+;
+X15ae:	mov	r5,a
+X15af:	mov	r6,#0x18
+X15b1:	mov	r7,#0xfa
+X15b3:	djnz	r7,X15b3
+	djnz	r6,X15b1
+	djnz	r5,X15af
+	ret	
+;
+_lcd_custom_setcontrast::
+	ljmp	_lcd_set_contrast_by_table
+
+	.area LCDAUX (CODE)
+
+_custom_contrasttbl::
+  .db  0x26, 0x30, 0x32, 0x34, 0x36, 0x38, 0x3a
+_custom_contrasttbl_len::  .db  7
+
+_custom_contrasttbl2::
+  .db  0x71, 0x25, 0x91, 0x36, 0xff
+_custom_contrasttbl2_len::  .db  5
+
+_custom_contrasttbl2_offsets::
+  .db  0x03	;0x05 <- ??? offset > table length ???
+_custom_contrasttbl2_offsets_len::  .db  1
+
+_custom_backlighttbl::
+  .db  0x00, 0x12, 0x24, 0x36, 0x48, 0x5a, 0x6c, 0x9c, 0xa8, 0xb4
+  .db  0xc0, 0xcc, 0xd8, 0xe4, 0xf0, 0xfc, 0xfc, 0xcc, 0xd8, 0xe4
+  .db  0xf0, 0xfc
+_custom_backlighttbl_len::  .db  22
+
+_custom_backlighttbl2::
+_custom_backlighttbl2_len::  .db  0
+
+_custom_initseq::
+  .db  0x71, 0x01, 0xb0, 0x64, 0x71, 0x11, 0xb0, 0xc8, 0x71, 0xc7
+  .db  0x91, 0xb0, 0x71, 0xff, 0x93, 0x40, 0x01, 0x1a, 0x71, 0xb1
+  .db  0x93, 0x01, 0x2c, 0x2d, 0x71, 0xb2, 0x93, 0x01, 0x2c, 0x2d
+  .db  0x71, 0xb3, 0x96, 0x01, 0x2c, 0x2d, 0x01, 0x2c, 0x2d, 0x71
+  .db  0xb4, 0x91, 0x07, 0x71, 0xc0, 0x93, 0x2a, 0x02, 0x84, 0x71
+  .db  0xc1, 0x91, 0xc5, 0x71, 0xc2, 0x92, 0x0a, 0x00, 0x71, 0xc3
+  .db  0x92, 0x8a, 0x2a, 0x71, 0xc4, 0x92, 0x8a, 0xee, 0x71, 0xc5
+  .db  0x91, 0x0e, 0x71, 0x36, 0x91, 0xc8, 0x71, 0xf0, 0x91, 0x01
+  .db  0x71, 0xf6, 0x91, 0x00, 0x71, 0xe0, 0x9f, 0x0f, 0x1a, 0x0f
+  .db  0x18, 0x2f, 0x28, 0x20, 0x22, 0x1f, 0x1b, 0x23, 0x37, 0x00
+  .db  0x07, 0x02, 0x71, 0xe1, 0x9f, 0x0f, 0x1b, 0x0f, 0x17, 0x33
+  .db  0x2c, 0x29, 0x2e, 0x30, 0x30, 0x39, 0x3f, 0x00, 0x07, 0x03
+  .db  0x71, 0x3a, 0x91, 0x05, 0x71, 0x2a, 0x94, 0x00, 0x02, 0x00
+  .db  0x81, 0x71, 0x2b, 0x94, 0x00, 0x03, 0x00, 0x82, 0x71, 0x29
+  .db  0xb0, 0x64, 0x71, 0x2c, 0xff
+_custom_initseq_len::  .db  145
+
