@@ -3,6 +3,11 @@ dpf-ax changelog
 	by <hackfin@section5.ch>
 	Find details in the git or svn logs.
 
+Fri, 07 Dec 2012
+       by superelchi
+       * New model:
+	 - clas_ohlson (thx BufferFramed)
+
 Sat, 01 Dec 2012
        by superelchi
        * New models:
